start to implement SFTP support

--- a/package.json
+++ b/package.json
@@ -53,13 +53,15 @@
     },
     "readmeFilename": "README.md",
     "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6",
-        "tslint": "^5.8.0",
+        "@types/mocha": "^2.2.42",
         "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+        "@types/ssh2-sftp-client": "^2.0.1",
+        "tslint": "^5.8.0",
+        "typescript": "^2.6.1",
+        "vscode": "^1.1.6"
     },
     "dependencies": {
+        "ssh2-sftp-client": "^2.2.1",
         "vscode-helpers": "^2.2.0"
     }
 }
