--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support for handling remote files like local ones.",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "publisher": "mkloubert",
     "engines": {
         "vscode": "^1.23.0"
@@ -19,12 +19,14 @@
         "multi-root ready"
     ],
     "activationEvents": [
+        "onFileSystem:ftp",
+        "onFileSystemAccess:ftp",
         "onFileSystem:sftp",
         "onFileSystemAccess:sftp"
     ],
     "main": "./out/extension",
     "contributes": {
-        "commands": [ ]
+        "commands": []
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
@@ -64,9 +66,11 @@
         "vscode": "^1.1.6"
     },
     "dependencies": {
+        "jsftp": "^2.1.3",
         "lodash": "^4.17.10",
         "moment": "^2.22.1",
         "moment-timezone": "^0.5.17",
+        "parse-listing": "^1.1.3",
         "ssh2-sftp-client": "^2.2.1",
         "vscode-helpers": "^2.2.0"
     }
