--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support for handling remote files like local ones.",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "publisher": "mkloubert",
     "engines": {
         "vscode": "^1.23.0"
@@ -11,16 +11,18 @@
         "Other"
     ],
     "keywords": [
-        "SFTP",
         "FTP",
         "Remote",
-        "WorkspaceFolders",
+        "S3",
+        "SFTP",
         "Workspaces",
         "multi-root ready"
     ],
     "activationEvents": [
         "onFileSystem:ftp",
         "onFileSystemAccess:ftp",
+        "onFileSystem:s3",
+        "onFileSystemAccess:s3",
         "onFileSystem:sftp",
         "onFileSystemAccess:sftp"
     ],
@@ -55,7 +57,9 @@
     },
     "readmeFilename": "README.md",
     "devDependencies": {
+        "@types/aws-sdk": "^2.7.0",
         "@types/lodash": "^4.14.108",
+        "@types/mime-types": "^2.1.0",
         "@types/mocha": "^2.2.42",
         "@types/moment": "^2.13.0",
         "@types/moment-timezone": "^0.5.4",
@@ -66,8 +70,10 @@
         "vscode": "^1.1.6"
     },
     "dependencies": {
+        "aws-sdk": "^2.238.1",
         "jsftp": "^2.1.3",
         "lodash": "^4.17.10",
+        "mime-types": "^2.1.18",
         "moment": "^2.22.1",
         "moment-timezone": "^0.5.17",
         "parse-listing": "^1.1.3",
