--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support for handling remote files like local ones.",
-    "version": "0.3.0",
+    "version": "0.4.0",
     "publisher": "mkloubert",
     "engines": {
         "vscode": "^1.23.0"
     },
     "categories": [
+        "Azure",
         "Other"
     ],
     "keywords": [
@@ -19,6 +20,8 @@
         "multi-root ready"
     ],
     "activationEvents": [
+        "onFileSystem:azure",
+        "onFileSystemAccess:azure",
         "onFileSystem:ftp",
         "onFileSystemAccess:ftp",
         "onFileSystem:s3",
@@ -65,12 +68,14 @@
         "@types/moment-timezone": "^0.5.4",
         "@types/node": "^7.0.43",
         "@types/ssh2-sftp-client": "^2.0.1",
+        "@types/uuid": "^3.4.3",
         "tslint": "^5.8.0",
         "typescript": "^2.6.1",
         "vscode": "^1.1.6"
     },
     "dependencies": {
         "aws-sdk": "^2.238.1",
+        "azure-storage": "^2.8.2",
         "jsftp": "^2.1.3",
         "lodash": "^4.17.10",
         "mime-types": "^2.1.18",
@@ -78,6 +83,7 @@
         "moment-timezone": "^0.5.17",
         "parse-listing": "^1.1.3",
         "ssh2-sftp-client": "^2.2.1",
+        "uuid": "^3.2.1",
         "vscode-helpers": "^2.2.0"
     }
 }
