--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support for handling remote files like local ones.",
-    "version": "0.5.0",
+    "version": "0.6.0",
     "publisher": "mkloubert",
     "engines": {
         "vscode": "^1.23.0"
@@ -13,7 +13,7 @@
     ],
     "keywords": [
         "FTP",
-        "Remote",
+        "Dropbox",
         "S3",
         "SFTP",
         "Slack",
@@ -22,6 +22,8 @@
     "activationEvents": [
         "onFileSystem:azure",
         "onFileSystemAccess:azure",
+        "onFileSystem:dropbox",
+        "onFileSystemAccess:dropbox",
         "onFileSystem:ftp",
         "onFileSystemAccess:ftp",
         "onFileSystem:s3",
@@ -79,6 +81,8 @@
         "@slack/client": "^4.2.2",
         "aws-sdk": "^2.238.1",
         "azure-storage": "^2.8.2",
+        "dropbox": "^4.0.4",
+        "isomorphic-fetch": "^2.2.1",
         "jsftp": "^2.1.3",
         "lodash": "^4.17.10",
         "mime-types": "^2.1.18",
