--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support (like Azure, Dropbox, S3, (S)FTP or Slack) for handling remote files like local ones.",
-    "version": "0.12.2",
+    "version": "0.13.0",
     "publisher": "mkloubert",
     "engines": {
         "vscode": "^1.23.0"
@@ -17,6 +17,7 @@
         "S3",
         "SFTP",
         "Slack",
+        "WebDAV",
         "multi-root ready"
     ],
     "activationEvents": [
@@ -31,7 +32,9 @@
         "onFileSystem:sftp",
         "onFileSystemAccess:sftp",
         "onFileSystem:slack",
-        "onFileSystemAccess:slack"
+        "onFileSystemAccess:slack",
+        "onFileSystem:webdav",
+        "onFileSystemAccess:webdav"
     ],
     "main": "./out/extension",
     "contributes": {
@@ -79,7 +82,7 @@
     },
     "dependencies": {
         "@slack/client": "^4.2.2",
-        "aws-sdk": "^2.238.1",
+        "aws-sdk": "^2.240.1",
         "azure-storage": "^2.8.2",
         "dropbox": "^4.0.4",
         "isomorphic-fetch": "^2.2.1",
@@ -91,6 +94,7 @@
         "parse-listing": "^1.1.3",
         "ssh2-sftp-client": "^2.2.1",
         "uuid": "^3.2.1",
-        "vscode-helpers": "^2.2.0"
+        "vscode-helpers": "^2.2.0",
+        "webdav-client": "^1.4.1"
     }
 }
