updated keyword list

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
         "S3",
         "SFTP",
         "Slack",
-        "WebDAV",
-        "multi-root ready"
+        "WebDAV"
     ],
     "activationEvents": [
         "onFileSystem:azure",
