--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support (like Azure, Dropbox, S3, (S)FTP or Slack) for handling remote files like local ones.",
-    "version": "0.19.0",
+    "version": "0.20.0",
     "publisher": "mkloubert",
     "engines": {
         "vscode": "^1.23.0"
@@ -33,11 +33,30 @@
         "onFileSystem:slack",
         "onFileSystemAccess:slack",
         "onFileSystem:webdav",
-        "onFileSystemAccess:webdav"
+        "onFileSystemAccess:webdav",
+        "onCommand:extension.remote.workspace.openURI",
+        "onCommand:extension.remote.workspace.receiveWorkspaceURI",
+        "onCommand:extension.remote.workspace.sendWorkspaceURI"
     ],
     "main": "./out/extension",
     "contributes": {
-        "commands": []
+        "commands": [
+            {
+                "command": "extension.remote.workspace.openURI",
+                "title": "Open URI ...",
+                "category": "Remote Workspace"
+            },
+            {
+                "command": "extension.remote.workspace.receiveWorkspaceURI",
+                "title": "Receive Remote URI ...",
+                "category": "Remote Workspace"
+            },
+            {
+                "command": "extension.remote.workspace.sendWorkspaceURI",
+                "title": "Share Remote URI ...",
+                "category": "Remote Workspace"
+            }
+        ]
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
@@ -90,6 +109,7 @@
         "mime-types": "^2.1.18",
         "moment": "^2.22.1",
         "moment-timezone": "^0.5.17",
+        "node-simple-socket": "^2.8.1",
         "parse-listing": "^1.1.3",
         "ssh2-sftp-client": "^2.2.1",
         "uuid": "^3.2.1",
