--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support (like Azure, Dropbox, S3, (S)FTP or Slack) for handling remote files like local ones.",
-    "version": "0.23.0",
+    "version": "0.24.0",
     "publisher": "mkloubert",
     "engines": {
         "vscode": "^1.23.0"
@@ -26,6 +26,8 @@
         "onFileSystemAccess:dropbox",
         "onFileSystem:ftp",
         "onFileSystemAccess:ftp",
+        "onFileSystem:ftps",
+        "onFileSystemAccess:ftps",
         "onFileSystem:s3",
         "onFileSystemAccess:s3",
         "onFileSystem:sftp",
@@ -99,10 +101,12 @@
         "vscode": "^1.1.6"
     },
     "dependencies": {
+        "@icetee/ftp": "^1.0.2",
         "@slack/client": "^4.2.2",
         "aws-sdk": "^2.243.1",
         "azure-storage": "^2.8.2",
         "dropbox": "4.0.4",
+        "ftp": "^0.3.10",
         "isomorphic-fetch": "^2.2.1",
         "jsftp": "^2.1.3",
         "lodash": "^4.17.10",
