--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support (like Azure, Dropbox, S3, (S)FTP or Slack) for handling remote files like local ones.",
-    "version": "0.24.1",
+    "version": "0.25.0",
     "publisher": "mkloubert",
     "engines": {
-        "vscode": "^1.23.0"
+        "vscode": "^1.24.0"
     },
+    "enableProposedApi": true,
     "categories": [
         "Azure",
         "Other"
@@ -92,32 +93,32 @@
         "@types/mime-types": "^2.1.0",
         "@types/mocha": "^2.2.42",
         "@types/moment": "^2.13.0",
-        "@types/moment-timezone": "^0.5.4",
+        "@types/moment-timezone": "^0.5.6",
         "@types/node": "^7.0.65",
         "@types/ssh2-sftp-client": "^2.0.1",
         "@types/uuid": "^3.4.3",
         "tslint": "^5.8.0",
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6"
+        "typescript": "^2.9.1",
+        "vscode": "^1.1.18"
     },
     "dependencies": {
         "@icetee/ftp": "^1.0.2",
-        "@slack/client": "^4.2.2",
-        "aws-sdk": "^2.243.1",
-        "azure-storage": "^2.8.2",
-        "dropbox": "4.0.4",
+        "@slack/client": "^4.3.1",
+        "aws-sdk": "^2.252.1",
+        "azure-storage": "^2.8.3",
+        "dropbox": "^4.0.4",
         "ftp": "^0.3.10",
         "isomorphic-fetch": "^2.2.1",
         "jsftp": "^2.1.3",
         "lodash": "^4.17.10",
         "mime-types": "^2.1.18",
-        "moment": "^2.22.1",
+        "moment": "^2.22.2",
         "moment-timezone": "^0.5.17",
         "node-simple-socket": "^2.8.1",
         "parse-listing": "^1.1.3",
         "ssh2-sftp-client": "^2.2.1",
         "uuid": "^3.2.1",
-        "vscode-helpers": "^2.2.0",
-        "webdav-client": "^1.4.1"
+        "vscode-helpers": "^2.6.2",
+        "webdav-client": "^1.4.2"
     }
 }
