--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support (like Azure, Dropbox, S3, (S)FTP or Slack) for handling remote files like local ones.",
-    "version": "0.26.0",
+    "version": "0.26.1",
     "publisher": "mkloubert",
     "engines": {
         "vscode": "^1.23.0"
@@ -107,6 +107,7 @@
     "devDependencies": {
         "@types/aws-sdk": "^2.7.0",
         "@types/lodash": "^4.14.109",
+        "@types/marked": "^0.3.0",
         "@types/mime-types": "^2.1.0",
         "@types/mocha": "^2.2.42",
         "@types/moment": "^2.13.0",
@@ -128,6 +129,7 @@
         "isomorphic-fetch": "^2.2.1",
         "jsftp": "^2.1.3",
         "lodash": "^4.17.10",
+        "marked": "^0.4.0",
         "mime-types": "^2.1.18",
         "moment": "^2.22.1",
         "moment-timezone": "^0.5.17",
