--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support (like Azure, Dropbox, S3, (S)FTP or Slack) for handling remote files like local ones.",
-    "version": "0.30.0",
+    "version": "0.30.1",
     "publisher": "mkloubert",
     "engines": {
         "vscode": "^1.23.0"
@@ -134,7 +134,7 @@
         "moment-timezone": "^0.5.21",
         "node-simple-socket": "^2.8.1",
         "parse-listing": "^1.1.3",
-        "ssh2-sftp-client": "^2.3.0",
+        "ssh2-sftp-client": "2.2.1",
         "uuid": "^3.3.2",
         "vscode-helpers": "^2.10.3",
         "webdav-client": "^1.4.2"
