--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support (like Azure, Dropbox, S3, (S)FTP or Slack) for handling remote files like local ones.",
-    "version": "0.32.1",
+    "version": "0.33.0",
     "publisher": "mkloubert",
     "engines": {
-        "vscode": "^1.25.0"
+        "vscode": "^1.27.0"
     },
     "categories": [
         "Azure",
@@ -106,30 +106,30 @@
     "readmeFilename": "README.md",
     "devDependencies": {
         "@types/aws-sdk": "^2.7.0",
-        "@types/lodash": "^4.14.115",
+        "@types/lodash": "^4.14.116",
         "@types/marked": "^0.3.0",
         "@types/mime-types": "^2.1.0",
         "@types/mocha": "^2.2.42",
         "@types/moment": "^2.13.0",
-        "@types/moment-timezone": "^0.5.6",
-        "@types/node": "^7.0.67",
-        "@types/uuid": "^3.4.3",
+        "@types/moment-timezone": "^0.5.9",
+        "@types/node": "8.9.3",
+        "@types/uuid": "^3.4.4",
         "tslint": "^5.11.0",
         "typescript": "^2.9.2",
-        "vscode": "^1.1.18"
+        "vscode": "^1.1.21"
     },
     "dependencies": {
         "@icetee/ftp": "^1.0.3",
-        "@slack/client": "^4.3.1",
-        "aws-sdk": "^2.282.1",
-        "azure-storage": "^2.10.0",
+        "@slack/client": "^4.8.0",
+        "aws-sdk": "^2.327.0",
+        "azure-storage": "^2.10.1",
         "dropbox": "4.0.4",
         "ftp": "^0.3.10",
         "isomorphic-fetch": "^2.2.1",
         "jsftp": "^2.1.3",
-        "lodash": "^4.17.10",
+        "lodash": "^4.17.11",
         "marked": "^0.4.0",
-        "mime-types": "^2.1.19",
+        "mime-types": "^2.1.20",
         "moment": "^2.22.2",
         "moment-timezone": "^0.5.21",
         "node-simple-socket": "^2.8.1",
