--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
         "moment-timezone": "^0.5.23",
         "node-simple-socket": "^2.8.1",
         "parse-listing": "^1.1.3",
-        "ssh2-sftp-client": "2.3.0",
+        "ssh2-sftp-client": "^2.5.0",
         "uuid": "^3.3.2",
         "vscode-helpers": "^4.0.1",
         "webdav-client": "^1.4.2"
