--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support (like Azure, Dropbox, S3, (S)FTP or Slack) for handling remote files like local ones.",
-    "version": "0.42.0",
+    "version": "0.43.0",
     "publisher": "mkloubert",
     "engines": {
-        "vscode": "^1.32.0"
+        "vscode": "^1.38.0"
     },
     "categories": [
         "Azure",
@@ -105,38 +105,37 @@
     },
     "readmeFilename": "README.md",
     "devDependencies": {
-        "@types/aws-sdk": "^2.7.0",
-        "@types/lodash": "^4.14.123",
-        "@types/marked": "^0.6.3",
+        "@types/lodash": "^4.14.141",
+        "@types/marked": "^0.6.5",
         "@types/mime-types": "^2.1.0",
-        "@types/mocha": "^5.2.6",
-        "@types/moment": "^2.13.0",
+        "@types/mocha": "^5.2.7",
         "@types/moment-timezone": "^0.5.12",
-        "@types/node": "8.9.3",
-        "@types/uuid": "^3.4.4",
-        "tslint": "^5.14.0",
-        "typescript": "^3.3.3333",
-        "vscode": "^1.1.30"
+        "@types/node": "10.11.0",
+        "@types/ssh2-sftp-client": "^4.1.0",
+        "@types/uuid": "^3.4.5",
+        "tslint": "^5.20.0",
+        "typescript": "3.4.5",
+        "vscode": "^1.1.36"
     },
     "dependencies": {
         "@icetee/ftp": "^1.0.3",
-        "@slack/client": "^4.11.0",
-        "aws-sdk": "^2.422.0",
-        "azure-storage": "^2.10.2",
-        "dropbox": "4.0.4",
+        "@slack/client": "^5.0.2",
+        "aws-sdk": "^2.538.0",
+        "azure-storage": "^2.10.3",
+        "dropbox": "^4.0.30",
         "ftp": "^0.3.10",
         "isomorphic-fetch": "^2.2.1",
         "jsftp": "^2.1.3",
-        "lodash": "^4.17.11",
-        "marked": "^0.6.1",
-        "mime-types": "^2.1.22",
+        "lodash": "^4.17.15",
+        "marked": "^0.7.0",
+        "mime-types": "^2.1.24",
         "moment": "^2.24.0",
-        "moment-timezone": "^0.5.23",
+        "moment-timezone": "^0.5.26",
         "node-simple-socket": "^2.8.1",
         "parse-listing": "^1.1.3",
-        "ssh2-sftp-client": "^2.5.0",
-        "uuid": "^3.3.2",
-        "vscode-helpers": "^4.0.1",
+        "ssh2-sftp-client": "^4.2.0",
+        "uuid": "^3.3.3",
+        "vscode-helpers": "^6.0.0",
         "webdav-client": "^1.4.2"
     }
 }
