--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "vscode-remote-workspace",
     "displayName": "Remote Workspace",
     "description": "Multi protocol support (like Azure, Dropbox, S3, (S)FTP or Slack) for handling remote files like local ones.",
-    "version": "0.43.1",
+    "version": "0.44.0",
     "publisher": "mkloubert",
     "engines": {
-        "vscode": "^1.38.0"
+        "vscode": "^1.42.0"
     },
     "categories": [
         "Azure",
@@ -83,7 +83,8 @@
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+        "test": "npm run compile && node ./node_modules/vscode/bin/test",
+        "publish": "node ./publish.js"
     },
     "icon": "icon.png",
     "badges": [
@@ -105,22 +106,23 @@
     },
     "readmeFilename": "README.md",
     "devDependencies": {
-        "@types/lodash": "^4.14.141",
+        "@types/lodash": "^4.14.149",
         "@types/marked": "^0.6.5",
         "@types/mime-types": "^2.1.0",
         "@types/mocha": "^5.2.7",
         "@types/moment-timezone": "^0.5.12",
-        "@types/node": "10.11.0",
-        "@types/ssh2-sftp-client": "^4.1.0",
-        "@types/uuid": "^3.4.5",
-        "tslint": "^5.20.0",
-        "typescript": "3.4.5",
+        "@types/node": "12.0.12",
+        "@types/ssh2-sftp-client": "^4.1.3",
+        "@types/uuid": "^3.4.7",
+        "tslint": "^5.20.1",
+        "typescript": "^3.8.2",
+        "vsce": "^1.73.0",
         "vscode": "^1.1.36"
     },
     "dependencies": {
-        "@icetee/ftp": "^1.0.3",
+        "@icetee/ftp": "^1.0.5",
         "@slack/client": "^5.0.2",
-        "aws-sdk": "^2.538.0",
+        "aws-sdk": "^2.624.0",
         "azure-storage": "^2.10.3",
         "dropbox": "^4.0.30",
         "ftp": "^0.3.10",
@@ -128,14 +130,14 @@
         "jsftp": "^2.1.3",
         "lodash": "^4.17.15",
         "marked": "^0.7.0",
-        "mime-types": "^2.1.24",
+        "mime-types": "^2.1.26",
         "moment": "^2.24.0",
-        "moment-timezone": "^0.5.26",
+        "moment-timezone": "^0.5.28",
         "node-simple-socket": "^2.8.1",
         "parse-listing": "^1.1.3",
-        "ssh2-sftp-client": "^4.2.0",
-        "uuid": "^3.3.3",
+        "ssh2-sftp-client": "^4.3.1",
+        "uuid": "^3.4.0",
         "vscode-helpers": "^6.0.0",
-        "webdav-client": "^1.4.2"
+        "webdav-client": "^1.4.3"
     }
 }
