--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
         "@types/mime-types": "^2.1.0",
         "@types/mocha": "^5.2.7",
         "@types/moment-timezone": "^0.5.12",
-        "@types/node": "12.0.12",
+        "@types/node": "^10.17.16",
         "@types/ssh2-sftp-client": "^4.1.3",
         "@types/uuid": "^3.4.7",
         "tslint": "^5.20.1",
